--- a/src/style.css
+++ b/src/style.css
@@ -575,6 +575,7 @@ body {
 .economic-item-news p {
   font-weight: bold;
 }
+
 @media screen and (min-width: 768px) {
   .fiveth-section-container {
     grid-template-columns: 2fr 1fr;
@@ -598,5 +599,35 @@ body {
   .economic-container {
     padding: 1rem;
     row-gap: 1rem;
+  }
+}
+
+/*********************************/
+/********** 6th section **********/
+/*********************************/
+
+.sixth-section-container {
+  padding: 0.5rem;
+}
+
+.sixth-section-first img {
+  width: 100%;
+}
+
+.sixth-section-first .news-date {
+  display: block;
+  text-align: right;
+}
+
+@media screen and (min-width: 768px) {
+  .sixth-section-container {
+    padding: 1rem;
+  }
+
+  .sixth-section-first {
+    display: grid;
+    column-gap: 1rem;
+    align-items: center;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
