--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,21 @@
 /*********************************/
+/************ fonts **************/
+/*********************************/
+@font-face {
+  font-family: "iransans";
+  font-style: normal;
+  font-weight: normal;
+  src: url("fonts/IRANSansWeb.woff2") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+@font-face {
+  font-family: "iransans";
+  font-style: bold;
+  font-weight: bold;
+  src: url("fonts/IRANSansWeb_Bold.woff2") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/*********************************/
 /************ global *************/
 /*********************************/
 html {
@@ -6,8 +23,8 @@ html {
   font-size: 0.9rem;
   line-height: 1.5;
   color: #555;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "iransans";
+  box-sizing: border-box;
 }
 
 html img {
@@ -20,6 +37,18 @@ html img:hover {
 
 body {
   margin: 0;
+  color: #555;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
+a {
+  text-decoration: none;
+  color: #555;
 }
 
 .wrapper {
@@ -39,7 +68,7 @@ body {
 
 .section-title {
   background-color: white;
-  border-bottom: solid 3px #098481;
+  border-bottom: solid 2px #098481;
   margin: 0 0.5rem;
 }
 
@@ -66,16 +95,27 @@ body {
   }
 
   .topbar {
+    display: flex;
     font-size: 0.8rem;
     color: white;
-    display: flex;
     padding: 0.5rem;
     justify-content: space-between;
     align-items: center;
   }
 
-  .topbar a {
-    margin-left: 0.3rem;
+  .topbar .date {
+    display: grid;
+    column-gap: 0.5rem;
+  }
+
+  .socials {
+    display: grid;
+    grid-template-columns: repeat(4, 0.25fr);
+    column-gap: 0.5rem;
+  }
+
+  .socials a svg path {
+    fill: white;
   }
 
   .topbar .date {
@@ -87,15 +127,11 @@ body {
 /************ navbar *************/
 /*********************************/
 .navbar-background {
-  position: sticky;
-  top: 0;
   background-color: #1fbbb7;
-  z-index: 10;
 }
 
 .navbar {
-  position: sticky;
-  top: 0;
+  display: flex;
   box-sizing: border-box;
   align-items: center;
   justify-content: space-between;
@@ -104,11 +140,47 @@ body {
 
 .navbar a {
   font-size: 0.8rem;
-  padding: 1rem;
-  color: white;
-  display: block;
+  padding: 1.5rem 1rem;
+  display: inline-block;
   text-align: right;
   text-decoration: none;
+  color: white;
+}
+
+.nav-ul {
+  list-style: none;
+}
+
+.navbar-links ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+.navbar-links ul li {
+  cursor: pointer;
+  border-bottom: solid white 1px;
+}
+
+.navbar-links ul li svg {
+  position: absolute;
+  padding: 1rem;
+  z-index: 20;
+  left: 0;
+}
+
+.navbar-submenu {
+  display: none;
+}
+
+.navbar-submenu ul li {
+  padding: 0 1.5rem;
+  border-bottom: none;
+  border-top: solid white 1px;
+  background-color: #2a9492;
+}
+
+.navbar-submenu.open {
+  display: block;
 }
 
 .navbar-links {
@@ -119,20 +191,32 @@ body {
   height: 100vh;
   top: 0;
   right: 0;
-  padding-top: 5rem;
-  z-index: -1;
-}
-
-.navbar-links a {
-  border-bottom: solid white 1px;
-}
-
-.navbar-links a:first-child {
-  padding-top: 3rem;
+  padding-top: 7rem;
 }
 
 .navbar-links a:hover {
   color: orange;
+}
+
+.search-box {
+  padding: 0.5rem;
+  display: none;
+}
+
+.search-box input,
+.search-box input:hover {
+  z-index: 20;
+  display: inline-block;
+  padding: 0.5rem;
+  border: none;
+  font-size: 16px;
+  border-radius: 0.2rem;
+  width: 100%;
+}
+
+.search-box.open {
+  display: flex;
+  justify-content: center;
 }
 
 .navbar-links.open {
@@ -140,7 +224,7 @@ body {
 }
 
 .logo {
-  display: inline-block;
+  z-index: 10;
 }
 
 .logo a {
@@ -152,52 +236,75 @@ body {
 }
 
 .icon-search {
-  display: none;
+  cursor: pointer;
   color: white;
 }
 
 .icon-menu {
-  position: absolute;
   cursor: pointer;
-  top: 1rem;
-  left: 1rem;
   color: white;
   font-size: 1.5rem;
-  z-index: 100;
+  z-index: 10;
 }
 
 @media screen and (min-width: 768px) {
+  .navbar {
+    display: grid;
+    grid-template-columns: 0.2fr 0.6fr 0.2fr;
+  }
+
   .icon-menu {
     display: none;
   }
 
-  .logo img {
-    width: 5rem;
+  .nav-ul {
+    display: flex;
   }
 
   .navbar-links {
+    display: grid;
+    justify-items: center;
     position: relative;
-    height: 0;
-    width: 30rem;
-    margin-bottom: 1rem;
+    width: 100%;
+    height: auto;
     padding: 0;
+  }
+
+  .nav-ul li:hover {
+    background-color: #2a9492;
+  }
+
+  .dropdown-menu:hover > .navbar-submenu {
     display: block;
   }
 
-  .icon-search {
-    display: block;
+  .navbar-links ul li svg {
+    position: relative;
+    float: left;
+    padding: 1.5rem 0 1rem 1rem;
+    z-index: 20;
   }
 
-  .navbar-links a {
-    display: inline;
+  .icon-search svg {
+    float: left;
+  }
+
+  .dropdown-menu a {
+    padding-left: 0.2rem;
+  }
+
+  .navbar-links ul li {
     border: none;
   }
 
-  .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 8rem;
+  .navbar-submenu {
+    position: absolute;
+    text-align: right;
+    width: 9rem;
+    transform: translate(0, -1rem);
+  }
+  .navbar-submenu a {
+    line-height: 0;
   }
 }
 
@@ -215,10 +322,14 @@ body {
 }
 
 .slide-container {
-  display: flex;
-  flex-direction: column;
-  padding: 0.5rem 0.5rem 1rem 0.5rem;
+  display: grid;
+  grid-template-rows: 1fr 0.7fr;
+  padding: 0.5rem;
   box-sizing: border-box;
+  width: 100%;
+}
+
+.slide-container a > img {
   width: 100%;
 }
 
@@ -240,6 +351,7 @@ body {
   font-size: 0.7rem;
   font-weight: 900;
 }
+
 .news-date p {
   padding-left: 2px;
   margin: 0;
@@ -247,14 +359,10 @@ body {
 
 @media screen and (min-width: 768px) {
   .slide-container {
-    flex-direction: row;
-    padding: 1rem;
-    margin-bottom: 2rem;
-  }
-
-  .slide-container img {
-    width: 50%;
-    margin-left: 1rem;
+    grid-template-rows: none;
+    column-gap: 1rem;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 1rem 1rem 3rem;
   }
 }
 
@@ -266,6 +374,18 @@ body {
   row-gap: 1rem;
   box-sizing: border-box;
   padding: 0.5rem;
+}
+
+.second-section-item {
+  display: grid;
+  grid-template-rows: 0.5fr auto;
+  row-gap: 1rem;
+}
+
+.slide-news-second {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
 .second-section-item img {
@@ -298,13 +418,21 @@ body {
   border-bottom: 1px solid darkslategray;
   padding-bottom: 0.5rem;
 }
+
+.third-slide-news {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 1rem 0;
+  justify-content: space-between;
+}
+
 .third-section-item:last-child {
   border-bottom: none;
 }
 
 .third-section-item img {
   width: 100%;
-  margin-left: 0.5rem;
 }
 
 .third-section-news-title {
@@ -322,6 +450,7 @@ body {
 
   .third-section-item {
     border: none;
+    column-gap: 1rem;
     padding: 0;
   }
 }
@@ -425,8 +554,23 @@ body {
   padding: 1rem 0;
 }
 
+.fourth-section-video-item .shadow-box-with-title,
+.fourth-section-item .shadow-box-with-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  min-height: 32rem;
+  box-sizing: border-box;
+}
+
 .fourth-section-item .section-title {
   background-color: #eeeeee;
+}
+
+.video-item-title-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .fourth-section-video-item .section-title {
@@ -449,7 +593,7 @@ body {
 
 .news-list-item {
   padding: 1rem;
-  border-bottom: solid 1px #adadad;
+  border-bottom: solid 2px #adadad;
   margin: 0 1rem;
 }
 
@@ -468,7 +612,8 @@ body {
 
 .video-list-item {
   display: grid;
-  grid-template-columns: 0.2fr 1fr;
+  grid-template-columns: 0.3fr 0.7fr;
+  column-gap: 0.5rem;
   height: 7rem;
   margin-bottom: 0.5rem;
 }
@@ -477,17 +622,15 @@ body {
   margin-bottom: 0;
 }
 
-.video-list-item p {
+.video-list-item a {
   font-size: 0.9rem;
   font-weight: bold;
 }
 
 .video-list-item img {
-  width: 7rem;
-  height: 7rem;
-  margin-left: 0.5rem;
-  object-fit: cover;
-  object-position: 25% 25%;
+  aspect-ratio: 1;
+  width: 100%;
+  height: auto;
 }
 
 .video-list-item img:hover {
@@ -526,11 +669,13 @@ body {
 .fiveth-section-container {
   display: grid;
   grid-template-rows: 1fr auto;
-  margin: 1rem 0;
+  box-sizing: border-box;
+  margin: 0.5rem 0;
   row-gap: 0.5rem;
 }
+
 .fiveth-section-item:first-child .section-title {
-  border-bottom: solid 3px #123c69;
+  border-bottom: solid 2px #123c69;
 }
 .fiveth-section-item:first-child .section-title p {
   background-color: #123c69;
@@ -567,6 +712,11 @@ body {
   object-position: 25% 25%;
 }
 
+.economic-item-news {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
 .economic-item-news .news-date {
   display: block;
   text-align: right;
@@ -580,6 +730,10 @@ body {
   .fiveth-section-container {
     grid-template-columns: 2fr 1fr;
     grid-template-rows: none;
+  }
+
+  .fiveth-section-item .shadow-box-with-title {
+    min-height: 65rem;
   }
 
   .politic-item {
