--- a/src/style.css
+++ b/src/style.css
@@ -187,8 +187,6 @@ a {
   display: none;
   position: fixed;
   background-color: #1fbbb7;
-  width: 20rem;
-  height: 100vh;
   top: 0;
   right: 0;
   padding-top: 7rem;
@@ -221,6 +219,8 @@ a {
 
 .navbar-links.open {
   display: block;
+  height: 100vh;
+  width: 20rem;
 }
 
 .logo {
@@ -265,7 +265,6 @@ a {
     display: grid;
     justify-items: center;
     position: relative;
-    width: 100%;
     height: auto;
     padding: 0;
   }
@@ -289,10 +288,6 @@ a {
     float: left;
   }
 
-  .dropdown-menu a {
-    padding-left: 0.2rem;
-  }
-
   .navbar-links ul li {
     border: none;
   }
@@ -303,8 +298,13 @@ a {
     width: 9rem;
     transform: translate(0, -1rem);
   }
+
   .navbar-submenu a {
     line-height: 0;
+  }
+
+  .dropdown-menu a {
+    padding-left: 0.2rem;
   }
 }
 
@@ -343,18 +343,13 @@ a {
 }
 
 .news-date {
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1rem auto;
   color: #acacac;
   direction: ltr;
   text-align: left;
   font-size: 0.7rem;
   font-weight: 900;
-}
-
-.news-date p {
-  padding-left: 2px;
-  margin: 0;
 }
 
 @media screen and (min-width: 768px) {
@@ -430,7 +425,9 @@ a {
 .third-section-item:last-child {
   border-bottom: none;
 }
-
+.third-section-item > a {
+  line-height: 0;
+}
 .third-section-item img {
   width: 100%;
 }
@@ -489,6 +486,7 @@ a {
 
 .footer-claim {
   display: flex;
+  width: 100%;
   justify-content: center;
   align-items: center;
   border-bottom: 1px solid #0277bd;
@@ -521,11 +519,15 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+  .footer-container {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+  }
   .footer {
     border-top: 2px solid #0277bd;
     justify-content: space-between;
     flex-direction: row;
-    padding: 0.5rem;
+    padding: 0.5rem 0;
   }
 
   .empty-space {
@@ -534,6 +536,7 @@ a {
   }
 
   .footer-claim {
+    width: auto;
     margin: 0;
     border: none;
   }
@@ -559,7 +562,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  min-height: 32rem;
+  min-height: 33rem;
   box-sizing: border-box;
 }
 
@@ -571,6 +574,10 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+
+.video-item-title-container .news-date {
+  display: block;
 }
 
 .fourth-section-video-item .section-title {
@@ -614,7 +621,6 @@ a {
   display: grid;
   grid-template-columns: 0.3fr 0.7fr;
   column-gap: 0.5rem;
-  height: 7rem;
   margin-bottom: 0.5rem;
 }
 
@@ -628,6 +634,7 @@ a {
 }
 
 .video-list-item img {
+  display: block;
   aspect-ratio: 1;
   width: 100%;
   height: auto;
@@ -685,12 +692,20 @@ a {
   padding: 0.5rem;
 }
 
+.politic-item a {
+  line-height: 0;
+}
+
 .politic-item .news-pre-title {
   color: #123c69;
 }
 
 .politic-item img {
   width: 100%;
+}
+
+.politic-news .news-date {
+  display: block;
 }
 
 .economic-container {
@@ -703,6 +718,10 @@ a {
   display: grid;
   column-gap: 0.5rem;
   grid-template-columns: 0.4fr 0.6fr;
+}
+
+.economic-item > a {
+  line-height: 0;
 }
 
 .economic-item img {
@@ -734,6 +753,9 @@ a {
 
   .fiveth-section-item .shadow-box-with-title {
     min-height: 65rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
   }
 
   .politic-item {
@@ -761,6 +783,8 @@ a {
 /*********************************/
 
 .sixth-section-container {
+  display: grid;
+  row-gap: 1rem;
   padding: 0.5rem;
 }
 
@@ -773,6 +797,14 @@ a {
   text-align: right;
 }
 
+.sixth-section-second {
+  display: grid;
+  row-gap: 1rem;
+}
+
+.sixth-section-second-item {
+  border-top: solid 2px #adadad;
+}
 @media screen and (min-width: 768px) {
   .sixth-section-container {
     padding: 1rem;
@@ -783,5 +815,102 @@ a {
     column-gap: 1rem;
     align-items: center;
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .sixth-section-second {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+    row-gap: 1rem;
+  }
+
+  .sixth-section-second-item {
+    border: none;
+  }
+}
+
+/*********************************/
+/********** 7th section **********/
+/*********************************/
+.seventh-section-container {
+  display: grid;
+  row-gap: 0.5rem;
+}
+.seventh-section-item .shadow-box-with-title {
+  padding: 0.5rem;
+  box-sizing: border-box;
+  display: grid;
+  row-gap: 0.5rem;
+}
+
+.seventh-section-item a img {
+  width: 100%;
+}
+
+.seventh-section-item:nth-child(odd) .section-title {
+  border-color: #123c69;
+}
+
+.seventh-section-item:nth-child(odd) .section-title p {
+  background-color: #123c69;
+}
+
+.seventh-section-item:nth-child(odd) .news-pre-title {
+  color: #123c69;
+}
+
+news-pre-title .seventh-section-news {
+  display: grid;
+  row-gap: 1rem;
+}
+
+.seventh-section-news .slide-news-second {
+  border-top: solid 1px#acacac;
+}
+
+.seventh-section-news .slide-news-second:first-child {
+  border: none;
+}
+
+@media screen and (min-width: 768px) {
+  .seventh-section-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .seventh-section-item .shadow-box-with-title {
+    padding: 1rem;
+  }
+}
+
+/*********************************/
+/********** 8th section **********/
+/*********************************/
+
+.image-gallery-container {
+  display: grid;
+  padding: 0.5rem;
+  row-gap: 0.5rem;
+}
+.image-gallery-container img {
+  aspect-ratio: 1;
+  display: block;
+  width: 100%;
+}
+
+.image-gallery-first-level {
+  display: grid;
+  column-gap: 0.5rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+@media screen and (min-width: 768px) {
+  .image-gallery-container {
+    padding: 1rem 0.5rem;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+  }
+
+  .image-gallery-first-level {
+    column-gap: 1rem;
   }
 }
