--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,12 @@ a {
   color: #555;
 }
 
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 .wrapper {
   max-width: 1200px;
   margin: auto;
@@ -76,7 +82,7 @@ a {
   color: white;
   display: inline-block;
   font-weight: bold;
-  background: #098481;
+  background-color: #098481;
   margin: 0;
   padding: 0.2rem 1rem;
 }
@@ -216,9 +222,10 @@ a {
 
 .search-box input,
 .search-box input:hover {
+  font-family: "iransans";
   z-index: 20;
   display: inline-block;
-  padding: 0.5rem;
+  padding: 0.3rem;
   border: none;
   font-size: 16px;
   border-radius: 0.2rem;
@@ -249,8 +256,14 @@ a {
 }
 
 .icon-search {
+  width: 2rem;
   cursor: pointer;
   color: white;
+}
+
+.icon-search svg {
+  width: 100%;
+  height: 100%;
 }
 
 .icon-menu {
@@ -260,10 +273,14 @@ a {
   z-index: 10;
 }
 
+.dropdown-link {
+  display: flex;
+  align-items: center;
+}
+
 @media screen and (min-width: 768px) {
   .navbar {
-    display: grid;
-    grid-template-columns: 0.2fr 0.6fr 0.2fr;
+    display: flex;
   }
 
   .icon-menu {
@@ -325,12 +342,12 @@ a {
 /************ carousel ***********/
 /*********************************/
 .splide-custom {
-  background: gray;
+  background-color: gray;
   margin: 0.4rem;
 }
 
 .splide-custom.is-active {
-  background: #2a9492;
+  background-color: #2a9492;
   transform: none;
 }
 
@@ -466,96 +483,6 @@ a {
 }
 
 /*********************************/
-/************ footer *************/
-/*********************************/
-.footer-background {
-  background-color: #eeeeee;
-  margin-top: 2rem;
-}
-
-.footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 1rem;
-}
-
-.footer-socials {
-  display: flex;
-  justify-content: center;
-}
-
-.footer-socials a {
-  padding: 0 0.2rem;
-}
-
-.footer p {
-  text-align: center;
-  margin: 0;
-  font-size: 0.9rem;
-  font-weight: bold;
-}
-
-.footer-claim {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  border-bottom: 1px solid #0277bd;
-  padding-bottom: 0.5rem;
-  margin-bottom: 1rem;
-}
-
-.footer-claim img {
-  width: 2.5rem;
-  height: 2.5rem;
-  padding-left: 0.5rem;
-}
-
-.bottom-footer-background {
-  background-color: #123c69;
-}
-
-.bottom-footer {
-  display: flex;
-  justify-content: center;
-  padding: 0.5rem;
-  color: lightgray;
-  font-size: 0.85rem;
-}
-
-.bottom-footer a {
-  text-decoration: none;
-  color: #1fbbb7;
-  padding: 0 0.5rem;
-}
-
-@media screen and (min-width: 768px) {
-  .footer-container {
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-  }
-  .footer {
-    border-top: 2px solid #0277bd;
-    justify-content: space-between;
-    flex-direction: row;
-    padding: 0.5rem 0;
-  }
-
-  .empty-space {
-    padding: 1.5rem;
-    margin-top: 2rem;
-  }
-
-  .footer-claim {
-    width: auto;
-    margin: 0;
-    border: none;
-  }
-}
-
-/*********************************/
 /********** 4th section **********/
 /*********************************/
 .fourth-section-background {
@@ -581,6 +508,13 @@ a {
 
 .fourth-section-item .section-title {
   background-color: #eeeeee;
+}
+
+.fourth-section-item .news-list-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 6rem;
 }
 
 .video-item-title-container {
@@ -614,7 +548,6 @@ a {
 .news-list-item {
   padding: 1rem;
   border-bottom: solid 2px #adadad;
-  margin: 0 1rem;
 }
 
 .news-list-item:last-child {
@@ -801,13 +734,12 @@ a {
   padding: 0.5rem;
 }
 
+.sixth-section-first {
+  display: grid;
+  row-gap: 1rem;
+}
 .sixth-section-first img {
   width: 100%;
-}
-
-.sixth-section-first .news-date {
-  display: block;
-  text-align: right;
 }
 
 .sixth-section-second {
@@ -847,8 +779,9 @@ a {
 /*********************************/
 .seventh-section-container {
   display: grid;
-  row-gap: 0.5rem;
+  row-gap: 1rem;
 }
+
 .seventh-section-item .shadow-box-with-title {
   padding: 0.5rem;
   box-sizing: border-box;
@@ -872,7 +805,7 @@ a {
   color: #123c69;
 }
 
-news-pre-title .seventh-section-news {
+.seventh-section-news {
   display: grid;
   row-gap: 1rem;
 }
@@ -925,5 +858,98 @@ news-pre-title .seventh-section-news {
 
   .image-gallery-first-level {
     column-gap: 1rem;
+  }
+}
+
+/*********************************/
+/************ footer *************/
+/*********************************/
+.footer-background {
+  background-color: #eeeeee;
+  margin-top: 2rem;
+}
+
+.footer {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 0.5rem;
+}
+
+.footer-socials {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-socials a {
+  padding: 0 0.2rem;
+}
+
+.footer p {
+  text-align: center;
+  margin: 0;
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+
+.footer-claim {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid #0277bd;
+  padding: 0.5rem;
+}
+
+.footer-claim img {
+  width: 2.5rem;
+  height: 2.5rem;
+  padding-left: 0.5rem;
+}
+
+.bottom-footer-background {
+  background-color: #123c69;
+}
+
+.bottom-footer {
+  display: flex;
+  justify-content: center;
+  padding: 0.5rem;
+  color: lightgray;
+  font-size: 0.85rem;
+}
+
+.bottom-footer a {
+  text-decoration: none;
+  color: #1fbbb7;
+  padding: 0 0.5rem;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: grid;
+    padding: 0.5rem;
+    box-sizing: border-box;
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  .footer {
+    display: flex;
+    border-top: 2px solid #0277bd;
+    justify-content: space-between;
+    flex-direction: row;
+    padding: 0.5rem 0 0 0;
+  }
+
+  .empty-space {
+    padding: 1.5rem;
+    margin-top: 2rem;
+  }
+
+  .footer-claim {
+    width: auto;
+    padding-right: 0;
+    border: none;
   }
 }
